tests/ui/specialization/specialization-default-items-drop-coherence.coherence.stderr
error[E0119]: conflicting implementations of trait `Overlap` for type `u32`
  --> $DIR/specialization-default-items-drop-coherence.rs:29:1
   |
LL | impl Overlap for u32 {
   | -------------------- first implementation here
...
LL | impl Overlap for <u32 as Default>::Id {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
